# app/routes/auth/route.ts
@@ -6,5 +6,6 @@ const controller = new authController();
 
 router.post('/register', controller.register);
 router.post('/login', controller.login);
+router.post('/verify', controller.verify);
 
 export default router;
